--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-content: center;
+  align-items: center;
   padding: 20px;
   list-style-type: none;
 }
@@ -18,6 +18,20 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+@media (max-width: 560px) {
+  .header-list-items {
+    display: none;
+  }
+  .header-container {
+    background-color: #f8f9fc;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+    padding: 5px;
+    list-style-type: none;
+  }
 }
 .header-cart {
   font-family: 'DM Sans';
@@ -70,4 +84,22 @@
 }
 .linked-elements {
   text-decoration: none;
+}
+
+@media (max-width: 560px) {
+  .hamburger-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-right: 10px;
+    color: #231f20;
+    font-size: 19px;
+  }
+}
+
+@media (min-width: 560px) {
+  .hamburger-container {
+    display: none;
+  }
 }
