--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  padding: 20px;
 }
 .home-page-button {
   width: 123px;
@@ -13,4 +14,7 @@
   border-radius: 12px;
   border-color: transparent;
   color: #ffffff;
+}
+.we-are-sorry {
+  text-align: center;
 }
