--- a/src/components/RestaurantDetails/index.css
+++ b/src/components/RestaurantDetails/index.css
@@ -4,7 +4,21 @@
   height: 220px;
   padding-right: 30px;
 }
+@media (max-width: 560px) {
+  .restaurant-image-banner {
+    border-radius: 10px;
+    width: 221px;
+    height: 221px;
 
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+
+    margin-left: -4px;
+    align-self: flex-start;
+    position: relative;
+    padding-right: 10px;
+  }
+}
 .restaurant-bg {
   background-color: #333333;
   display: flex;
@@ -14,6 +28,17 @@
   padding: 30px;
   margin-top: 20px;
   color: #ffffff;
+}
+@media (max-width: 560px) {
+  .restaurant-bg {
+    background-color: #333333;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-top: 0px;
+    padding: 0px;
+    color: #ffffff;
+  }
 }
 .rest-name {
   font-family: 'Roboto';
@@ -25,6 +50,20 @@
 
   letter-spacing: 0.2px;
 }
+
+.rest-name {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 21px;
+
+  /* identical to box height, or 150% */
+
+  letter-spacing: 0.2px;
+
+  color: #ffffff;
+}
+
 .rest-kindname {
   font-family: 'Roboto';
   font-style: normal;
@@ -33,7 +72,16 @@
 
   color: #ffffff;
 }
+@media (max-width: 560px) {
+  .rest-kindname {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
 
+    color: #ffffff;
+  }
+}
 .rest-location {
   font-family: 'Roboto';
   font-style: normal;
@@ -43,6 +91,16 @@
   color: #ffffff;
 }
 
+@media (max-width: 560px) {
+  .rest-location {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+
+    color: #ffffff;
+  }
+}
 .rating-cost-container {
   display: flex;
   flex-direction: row;
@@ -77,6 +135,10 @@
 
   margin-bottom: 0px;
   padding-bottom: 0px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
 }
 .ul-all-items-container {
   list-style-type: none;
@@ -88,4 +150,16 @@
   justify-content: flex-start;
   align-items: center;
   flex-wrap: wrap;
+}
+@media (max-width: 560px) {
+  .ul-all-items-container {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+  }
 }
