--- a/src/components/Slides/index.css
+++ b/src/components/Slides/index.css
@@ -2,3 +2,16 @@
   width: 100%;
   height: 260px;
 }
+@media (max-width: 560px) {
+  .offer-image {
+    width: 100%;
+    height: 200px;
+  }
+}
+.li-slides {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  margin-right: 0px;
+  padding-right: 0px;
+}
