--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -61,7 +61,7 @@
   color: #ffffff;
   font-size: 15px;
 }
-.header-home-cart {
+.home {
   font-family: 'DM Sans';
   font-style: normal;
   font-weight: 700;
@@ -71,7 +71,7 @@
   padding-left: 20px;
   padding-right: 20px;
 }
-.header-home-cart-false {
+.cart {
   font-family: 'DM Sans';
   font-style: normal;
   font-weight: 700;
