--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -81,6 +81,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
 }
 .place-order-cotainer {
   text-align: center;
